--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@qiwi/multi-semantic-release",
+	"name": "@simspace/multi-semantic-release",
 	"author": "Dave Houlbrooke <dave@shax.com>",
-	"version": "7.1.2",
+	"version": "7.1.3",
 	"license": "0BSD",
 	"engines": {
 		"node": ">=14",
@@ -104,5 +104,6 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/qiwi/multi-semantic-release.git"
-	}
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
